# Genoil-cpp-ethereum

./: CMakeLists.txt
cmake/: EthDependencies.cmake
eth/: main.cpp
libethash-cl/: CMakeLists.txt
libethash-cu/: CMakeLists.txt  etash_cu_miner_kernel_globals.h  ethash_cu_miner.cpp  ethash_cu_miner.h  ethash_cu_miner_kernel.cu  ethash_cu_miner_kernel.h  ethash_cu_miner_kernel_globals.h
libethcore/: CMakeLists.txt  Ethash.cpp  Ethash.h  EthashAux.cpp  EthashAux.h
libethereum/: Farm.h
libp2p/: Common.h  Host.cpp  Host.h  HostUtil.cpp  HostUtil.h  Network.cpp  Network.h  NetworkUtil.cpp  NetworkUtil.h  Overlay.cpp  Overlay.h  PeerOverlay.cpp  PeerOverlay.h  PeerProtocol.cpp  PeerProtocol.h
test/: p2p.cpp
